# GreenOps

./: .gitignore  Home.py  LICENSE  README.md  ai_agents.py  app.py  config.py  data_generator.py  data_handler.py  emission_factors.py  generate_data.py  gtu_large_dataset.csv  pyproject.toml  report_generator.py  requirements.txt  ui_components.py  utils.py
.streamlit/: config.toml  coonfig.toml
pages/: 1_Dashboard.py  2_Data_Entry.py  3_AI_Insights.py  4_Settings.py
static/: style.css
