[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project]
name = "GreenOps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[litellm]>=0.140.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "fpdf2>=2.8.7",
    "pandas>=2.3.3",
    "uuid>=1.30",
    "tzdata>=2024.1; sys_platform == 'win32'",
]
